# schunk_robots

./: .gitignore
schunk_description/: CMakeLists.txt  package.xml
schunk_description/launch/: view_robot.launch.py
schunk_description/ros2_control/: schunk_lwa4p_mock_hardware.ros2_control.xacro  schunk_lwa4p_system_position_only.ros2_control.xacro
schunk_description/urdf/: schunk_lwa4p.urdf.xacro  schunk_lwa4p_system_position_only.urdf.xacro
schunk_description/urdf/lwa4p/: lwa4p.urdf.xacro
schunk_lwa4p/: CMakeLists.txt  package.xml
schunk_lwa4p/config/: schunk_lwa4p.rviz  schunk_lwa4p_controllers.yaml  schunk_lwa4p_joint_trajectory_publisher.yaml
schunk_lwa4p/config/schunk_lwa4p/: bus.yml
schunk_lwa4p/launch/: schunk_lwa4p_control.launch.py  schunk_lwa4p_control_base.launch.py  schunk_lwa4p_hardware.launch.py  schunk_lwa4p_system_position_only.launch.py  test_joint_trajectory_controller.launch.py  view_robot.launch.py
