<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>schunk_description</name>
  <version>0.6.14</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of different schunk components. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/schunk_description</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="bfb@ipa.fhg.de">Bruno Brito</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
